# silero-tts-enhanced

./: .gitignore  README.md  README_RU.MD  pyproject.toml  requirements.txt
silero_tts/: __main__.py  lang_data.py  silero_tts.py  transliterate.py
tests/: test_syntez.py
